--- a/main.html
+++ b/main.html
@@ -10,12 +10,11 @@
 	<img height=300px src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000">
 	<P>5 software program developer profession paths</P>
 	<ul>
-	<li>Cloud development </li>	
-	<li>	Desktop development </li>
-		<li>Video Sport development </li>
-	<li>
-	Mobile development </li>	
-	<li>	Web development </li>
+	<li>Cloud development </li>	<br>
+	<li>	Desktop development </li><br>
+		<li>Video Sport development </li><br>
+	<li>Mobile development </li><br>
+	<li>	Web development </li><br>
 
 	</ul>
 	<!-- the entire body must be written by student -->
